Fixed the overflow bug

--- a/OSDUAcademy/ClientApp/src/custom.css
+++ b/OSDUAcademy/ClientApp/src/custom.css
@@ -122,6 +122,7 @@ code {
 .course-row {
     clip-path: inset(0px 0px 0px 0px);
     margin: 0;
+    overflow-x: hidden;
 }
 
 .course-row-container {
